--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id=app>1223</div>
+  <div id=app>inter</div>
   <!-- <script type=text/javascript src=/static/js/manifest.2dc0c9cb5936fc970e12.js></script>
   <script type=text/javascript src=/static/js/vendor.ff279002d665ab5ee569.js></script>
   <script type=text/javascript src=/static/js/app.60968282d77ca3bb2cef.js></script> -->
