--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset=utf-8>
   <title>111111</title>
-  <!-- <link href=/static/css/app.b3e06ef1e5c2e872bf8ce9f18ba993f9.css rel=stylesheet> -->
+  <link href=/index.css rel=stylesheet>
 </head>
 
 <body>
   <div id=app>inter</div>
+  <div class="box"></div>
   <!-- <script type=text/javascript src=/static/js/manifest.2dc0c9cb5936fc970e12.js></script>
   <script type=text/javascript src=/static/js/vendor.ff279002d665ab5ee569.js></script>
   <script type=text/javascript src=/static/js/app.60968282d77ca3bb2cef.js></script> -->
