--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset=utf-8>
   <title>111111</title>
-  <link href=/index.css rel=stylesheet>
+  <link href="./index.css" rel=stylesheet>
 </head>
 
 <body>
