--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset=utf-8>
   <title>inter</title>
-  <link href="/static/css/index.css" rel=stylesheet>
+  <link href="/resume/static/css/index.css" rel=stylesheet>
 </head>
 
 <body>
