--- a/index.html
+++ b/index.html
@@ -4,12 +4,94 @@
 <head>
   <meta charset=utf-8>
   <title>inter</title>
-  <link href="/josephzhang.github.io/static/css/index.css" rel=stylesheet>
+  <link href="./static/css/index.css" rel=stylesheet>
+  <!-- <link href="/josephzhang.github.io/static/css/index.css" rel=stylesheet> -->
+  <style>
+    *{
+  margin: 0;
+  padding: 0;
+}
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: lightseagreen;
+}
+
+.hd-content {
+  background-color: #3d415e;
+  width: 100vw;
+  height: 120px;
+  color: #fff;
+  font-size: 36px;
+  text-align: center;
+  line-height: 120px;
+}
+
+.body-content {
+  padding: 15px;
+}
+
+.main-card-title {
+  font-weight: bold;
+}
+.main-content {
+  margin: 20px 15px;
+}
+
+/* 项目经验 */
+
+.pro-duration {
+  display: flex;
+}
+
+.pro-duration >  div:first-child {
+  margin-right: 30px;
+}
+  </style>
 </head>
 
 <body>
-  <div id=app>inter</div>
-  <div class="box">1</div>
+  <div class="hd-content">javascript information</div>
+  <div class="body-content">
+    <!-- <div class="main-card">
+      <div class="main-card-title">Personal introduction</div>
+    </div> -->
+    <!-- 项目经验 -->
+    <div class="main-card">
+      <div class="main-card-title">Projects</div>
+      <div class="main-content pro-content">
+        <div class="pro-duration">
+          <div>2020.1 - 2020.2</div>
+          <div>pro-one</div>
+        </div>
+        <div></div>
+        <div>there are something about pro-one</div>
+      </div>
+      <div class="main-content pro-content">
+        <div class="pro-duration">
+          <div>2020.1 - 2020.2</div>
+          <div>pro-two</div>
+        </div>
+        <div></div>
+        <div>there are something about pro-two</div>
+      </div>
+    </div>
+    <!-- 工作经历 -->
+    <div class="main-card">
+      <div class="main-card-title">Company</div>
+      <div class="main-content">company 1</div>
+    </div>
+    <!-- 教育经历 -->
+    <div class="main-card">
+      <div class="main-card-title">Education</div>
+      <div class="main-content">edu 1</div>
+    </div>
+    <!-- 其他 -->
+    <div class="main-card">
+      <div class="main-card-title">More</div>
+    </div>
+    <a href="">learn more</a>
+  </div>
 </body>
 
 </html>
